--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/abhinav00041/CSS_app_backend#readme",
   "dependencies": {
+    "async": "^3.1.0",
     "body-parse": "^0.1.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "global-tunnel-ng": "^2.7.1",
+    "nodemailer": "^6.3.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.2.8"
